--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>edu.ifam.dra.chat</groupId>
+			<artifactId>chat</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
